# microservices

./: .gitignore  CMakeLists.txt  config.pri  local.pri-example  microservices.pro
microservices/: CMakeLists.txt  microservices.pro
microservices/auth-service/: .gitignore  Dockerfile  README.adoc  Taskfile.yml  config-example.yml  pyproject.toml
microservices/auth-service/auth_service/: Api.py  Configuration.py  Database.py  DatabaseHelper.py  JwtHelper.py  User.py  WebApp.py  main.py
microservices/auth-service/tests/: testHelper.py
microservices/auth-service/tests/test_unit_classes/: test_01_user.py  test_02_jwthelper.py
microservices/auth-service/tests/test_unit_database/: conftest.py  test_01_general.py  test_02_application.py  test_03_permission.py  test_04_user.py
microservices/common/: app.cpp  app.h  common.pro  permission.cpp  permission.h  user.cpp  user.h
microservices/common-server/: common-server.pro
microservices/user-service-server/: dbpermission.cpp  dbpermission.h  dbuser.cpp  dbuser.h  main.cpp  user-service-server.pro
microservices/user-service-services/: user-service-interface.cpp  user-service-interface.h  user-service-services.pro
tools/test-client/: test-client.py
